# solana-mev-substream

./: Cargo.toml  Makefile  schema.clickhouse.sql  substreams.yaml
proto/: block_meta.proto  sandwiches.proto  system_transfers.proto  transaction_details.proto  transaction_info.proto
sink/: substreams.dev.yaml
src/: constants.rs  error.rs  lib.rs  primitives.rs  sandwiches.rs  system_transfers.rs  transaction_details.rs  transaction_info.rs
src/pb/: mod.rs  sf.solana.dex.sandwiches.v1.rs  sf.solana.transaction.details.v1.rs  sf.solana.transaction.info.v1.rs  sf.solana.transfer.v1.rs
