[package]
name = "substreams-solana-quickstart"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.13"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master"}
substreams-solana-program-instructions = "0.1"
substreams-database-change = "1.3.1"
prost = "0.11" #latest version not working
num-bigint = "0.4"
anyhow = "1.0.86"
serde_qs = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
