[package]
name = "substreams-solana-quickstart"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.13"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master"}
substreams-database-change = "1.3.1"
substreams-solana-program-instructions = "0.1.1"
prost = "0.11" #latest version not working
num-bigint = "0.4"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13.0"
borsh = {version = "1.5.1", features = ["derive", "unstable__schema"]}
bs58 = "0.5.1"
log = "0.4.22"
thiserror = "1.0.63"
derive_more = { version = "1.0.0", features = ["display"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
